--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: cal-web
-    plan: standard
+    plan: free
     repo: https://github.com/calcom/docker.git
     dockerfilePath: ./Dockerfile.render
     env: docker
